--- a/wookie-movies/package.json
+++ b/wookie-movies/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mui/material": "^6.4.4",
+    "@mui/icons-material": "^6.4.4",
     "axios": "^1.7.9",
     "next": "15.1.7",
+    "postcss": "^8.5.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5",
+    "sass": "^1.85.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
