--- a/wookie-movies/package.json
+++ b/wookie-movies/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
+    "test:coverage": "npx jest --coverage",
     "test:watch": "jest --watch",
     "format": "npx prettier 'src/**/*.{tsx,ts,css}' --write"
   },
@@ -40,6 +41,7 @@
     "eslint-plugin-testing-library": "^7.1.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "msw": "^1.3.5",
     "prettier": "^3.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5"
